--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "testrail-detox-reporter",
-  "version": "1.2.0",
-  "description": "Custom Jest reporter for Testrail synchronization",
+  "version": "1.3.1",
+  "description": "Custom Detox reporter for Testrail",
   "main": "index.js",
   "engines": {
     "node": ">=10.0.0"
@@ -29,7 +29,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/AntonChaukin/testrail-jest-reporter.git"
+    "url": "git+https://github.com/Stacknvault/testrail-detox-reporter.git"
   },
   "keywords": [
     "jest",
@@ -44,9 +44,9 @@
   },
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/AntonChaukin/testrail-jest-reporter/issues"
+    "url": "https://github.com/Stacknvault/testrail-detox-reporter/issues"
   },
-  "homepage": "https://github.com/AntonChaukin/testrail-jest-reporter#readme",
+  "homepage": "https://github.com/Stacknvault/testrail-detox-reporter#readme",
   "devDependencies": {
     "faker": "5.5.3",
     "jest": "^26.6.3"
